blip (0.10.1) trusty; urgency=low

  * Abandoned old build.sh and gitversion.sh script in favour of pure
    Makefile.
  * Moved to native Debian package and semantic versioning scheme.
  * Temporarily abandoned automatic changelog generation for DEB and RPM
    packaging.
  * Addressed an number of shellcheck warnings relating to unit tests.

 -- Nicola Worthington <nicolaw@tfb.net>  Tue, 30 Jan 2018 20:20:45 +0000

blip (0.10-1) trusty; urgency=low

  * Fix bad array subscript error with invalid long option.
  * Tightened dependencies for Debian package.
  * Squashed source repository history and abandoned alpha changelog in
    preparation for more polished beta releases.

 -- Nicola Worthington <nicolaw@tfb.net>  Tue, 25 Oct 2016 21:45:55 +0100