@@ -14,5 +14,5 @@ sudo: required
 before_install:
     - sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu trusty-backports main restricted universe multiverse"
     - sudo apt-get -qq update
-    - sudo apt-get -t trusty-backports install shellcheck build-essential rpm devscripts debhelper bc grep coreutils curl util-linux
+    - sudo apt-get -t trusty-backports install shellcheck build-essential rpm devscripts debhelper git-buildpackage bc grep coreutils curl util-linux
     - sudo pip install bashate
